--- a/UniHub/app/src/main/res/values/colors.xml
+++ b/UniHub/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="card_background">#D9EDF6</color>
+    <color name="card_background_selected">#B2DDF3</color>
 </resources>
